--- a/deployment/eksmanifests/mysql-deployment.yaml
+++ b/deployment/eksmanifests/mysql-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: mysql:5.7
+        image: 160045352367.dkr.ecr.us-east-1.amazonaws.com/my-repo:mysql-v0.1:latest
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
