--- a/deployment/eksmanifests/mysql-deployment.yaml
+++ b/deployment/eksmanifests/mysql-deployment.yaml
@@ -1,8 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  name: mysql-deployment
   namespace: final
+  labels:
+    app: mysql
 spec:
   replicas: 1
   selector:
@@ -14,18 +16,15 @@ spec:
         app: mysql
     spec:
       containers:
-      - name: mysql
-        image: 160045352367.dkr.ecr.us-east-1.amazonaws.com/my-repo:mysql-v0.1:latest
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-secrets
-              key: MYSQL_PASSWORD
-        volumeMounts:
-        - name: mysql-storage
-          mountPath: /var/lib/mysql
-      volumes:
-      - name: mysql-storage
-        persistentVolumeClaim:
-          claimName: mysql-pvc
+        - name: mysql-container
+          image: 160045352367.dkr.ecr.us-east-1.amazonaws.com/my-repo:mysql-v0.1
+          ports:
+            - containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-secrets
+                  key: MYSQL_PASSWORD
+      imagePullSecrets:
+        - name: ecr-registry-secret
