--- a/deployment/eksmanifests/flask-deployment.yaml
+++ b/deployment/eksmanifests/flask-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app
+  name: flask-deployment
   namespace: final
 spec:
   replicas: 1
@@ -13,38 +13,25 @@ spec:
       labels:
         app: flask-app
     spec:
-      serviceAccountName: clo835
       containers:
-      - name: flask-container
-        image: 160045352367.dkr.ecr.us-east-1.amazonaws.com/my-repo:flask-app-v0.1
-        ports:
-        - containerPort: 81
-        env:
-        - name: BACKGROUND_IMAGE_URL
-          valueFrom:
-            configMapKeyRef:
-              name: app-config
-              key: BACKGROUND_IMAGE_URL
-        - name: HEADER_NAME
-          valueFrom:
-            configMapKeyRef:
-              name: app-config
-              key: HEADER_NAME
-        - name: MYSQL_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: db-secrets
-              key: MYSQL_USERNAME
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-secrets
-              key: MYSQL_PASSWORD
-        - name: DBHOST
-          value: "192.168.69.188"  # Use the MySQL service name here
-        - name: DBPORT
-          value: "3306"
-        # - name: DBUSER
-        #   value: "root"
-        # - name: DBPWD
-        #   value: "password"
+        - name: flask-container
+          image: 160045352367.dkr.ecr.us-east-1.amazonaws.com/my-repo:flask-app-v0.1
+          ports:
+            - containerPort: 81
+          env:
+            - name: DBHOST
+              value: mysql  # Replace with your MySQL service name
+            - name: DBPORT
+              value: "3306"
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: db-secrets
+                  key: MYSQL_USERNAME
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-secrets
+                  key: MYSQL_PASSWORD
+      imagePullSecrets:
+        - name: ecr-registry-secret
