updated the html files with header text

--- a/deployment/eksmanifests/configmap.yaml
+++ b/deployment/eksmanifests/configmap.yaml
@@ -5,4 +5,6 @@ metadata:
   namespace: final
 data:
   BACKGROUND_IMAGE_URL: "https://myvucket160896.s3.amazonaws.com/image2.jpg"
-  HEADER_NAME: "suma latha"
+  HEADER_NAME: "From Suma latha Pittala website"
+  DBHOST: "mysql"  # Service name or hostname
+  DBPORT: "3306"
