updated tag nem in workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,7 +33,7 @@ jobs:
         # Docker build using the standard Dockerfile
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:flaskapp-$IMAGE_TAG -f Dockerfile .
         # Docker push for the standard Dockerfile image
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:webapp-$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:flaskapp-$IMAGE_TAG
         
         # Docker build using Dockerfile_mysql
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:mysql-$IMAGE_TAG -f Dockerfile_mysql .
