--- a/deployment/eksmanifests/mysql-deployment.yaml
+++ b/deployment/eksmanifests/mysql-deployment.yaml
@@ -26,5 +26,12 @@ spec:
                 secretKeyRef:
                   name: db-secrets
                   key: MYSQL_PASSWORD
+          volumeMounts:
+            - name: mysql-storage
+              mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-storage
+          persistentVolumeClaim:
+            claimName: mysql-pvc
       imagePullSecrets:
         - name: ecr-registry-secret
